add_executable(HPCsim main.cpp RngStream.cpp sha2.c TThreadsFactory.cpp)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(PUBLIC HPCsim "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(HPCsim ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
else()
  target_link_libraries(HPCsim ${CMAKE_DL_LIBS})
endif()
